<resources>
    <string name="app_name">Agrify</string>
    <!-- Strings for On Boarding Screen -->
    <!--Titles-->
    <string name="first_slide_title">Fresh and Healthy Grocery</string>
    <string name="second_slide_title">Amazing Discounts</string>
    <string name="third_slide_title">Pickup and Delivery</string>
    <string name="welcome_Desc">Your friendly neighbourhood farm :)</string>

    <!--Descriptions-->
    <string name="slider"> slider for on boarding</string>
    <string name="first_slide_desc">Shop without stress within your neighbourhood </string>
    <string name="second_slide_desc">Cheaper prices than local supermarket, offer great deals and discounts</string>
    <string name="third_slide_desc"> Delivery and pickup are available right at your place</string>
    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Get Started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_category">Category</string>
    <string name="menu_offers">Events</string>
    <string name="menu_new_products">New Products</string>
    <string name="menu_my_orders">Order History</string>
    <string name="menu_my_carts">My Cart</string>
    <string name="menu_farms">Nearby Farms</string>
    <string name="menu_review">Community Reviews</string>
    <string name="menu_Map">Map</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="dashboard_title">Events</string>
    <string name="dashboard_heading">Events</string>
    <string name="dashboard_sub_title">Join events exclusive for your neighbourhood!</string>
    <string name="location">Taman Connaught, Cheras</string>
    <string name="desc">The Annual Christmas Bazaar brings out a variety of local arts &amp; crafts vendors just in time for the Holiday Season. The Christmas Bazaar is held annually on the Christmas Eve from 2 p.m. to 6 p.m. Each year, around 40 vendors fill the event with an assortment of handcrafted clothing, embroidery, jewelry, reefs, kitchenware, blankets, and decorations, just to name a few.</string>
</resources>