<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_baseline_local_offer_24"
            android:title="@string/menu_offers" />
        <item
            android:id="@+id/nav_farm"
            android:icon="@drawable/ic_baseline_add_business_24"
            android:title="@string/menu_farms" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/menu_my_orders" />
        <item
            android:id="@+id/nav_my_carts"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_my_carts" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_baseline_reviews_24"
            android:title="@string/menu_review" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_Map" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout"
            />
    </group>
</menu>