<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboard"
    android:padding="20dp">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/slider" />

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/skip_btn"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:padding="10dp"
       android:textColor="@color/black"
       android:background="#00000000"
       android:onClick="skip"
       android:drawableEnd="@drawable/skip_btn"
       android:drawableRight="@drawable/skip_btn"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/get_started_btn"
            android:onClick="getStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button"
            android:text="@string/let_get_started"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="20dp"
            android:orientation="horizontal"/>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="next"
            android:paddingBottom="30dp"
            android:background="#00000000"
            android:drawableEnd="@drawable/next_btn"
            android:text="@string/next_btn"
            android:textColor="@color/black"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>